# botscanner

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: main.yml
botscout/: __init__.py  _detector_utils.py  patterns.py
botscout/data/: patterns.yaml
src/botscanner/: ChatbotDetector.py  FeatureExtractor.py  InteractionsExtractor.py  __init__.py  _detector_utils.py  _launcher_utils.py  detector.py  launcher.py  logger.py  patterns.py  runner.py  utils.py
src/botscanner/data/: __init__.py  learn_sample_chatbots.csv  patterns.yaml  sample_websites_seed_12.csv  sample_websites_seed_12_labeled.csv  test_sample_chatbots.csv  test_sample_chatbots_extended.csv  test_websites.csv
src/botscanner/evaluators/: eval_anchor_chatbot_widget.py  eval_enchor_chatbot_widget.py  eval_iframe_chatbot_window.py  eval_interface_type.py  eval_shadow_chatbot_window.py  eval_title_window.py  get_first_chatbot_text.py  get_location_chatbot_anchor.py  get_location_chatbot_window.py
src/botscanner/finders/: BaseChatbotAnchorFinder.py  BaseChatbotWindowFinder.py  ComputedStyleChatbotAnchorFinder.py  IframeChatbotWindowFinder.py  ShadowChatbotAnchor.py  ShadowDOMChatbotWindowFinder.py  SimpleChatbotAnchorFinder.py  SimpleDOMChatbotWindowFinder.py  find_anchor_candidates_by_computed_style.py  find_anchor_candidates_by_hooks.py  framework_patterns.py  iframe.py  shadowDOM.py
src/botscanner/jstools/: find_button_by_text.py  find_el_anchor_viewpoint.py  find_el_computed_style.py  find_el_pointer_cursor.py  find_shadow_anchor.py  shadow_dom.py  shadow_search_js.py  wait_iframes.py
(+29 files in other folders)
