[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
#backend-path = "."

[project]
name = "botscanner"
version = "0.1.0"
description = "A Python library to crawl websites, detect, and analyze chatbot widgets."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Andrey Shevandrin", email = "shevandrin@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU GPLv3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "selenium",
    "webdriver-manager",
    "beautifulsoup4",
    "requests",
    "pyyaml",
    "python-dotenv",
    "pandas"
]

[project.urls]

Homepage = "https://github.com/shevandrin/botscanner"
Issues = "https://github.com/shevandrin/botscanner/issues"

[tool.setuptools.packages.find]
where = ["src"]

